--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
-<!-- Hola a todes!  -->
+<!-- Hola a todes! Yo no se ustedes, pero no dejo de pensar en codear durante todo el dia! Aguante SummerHack y aguante Jony con su buena onda ❤-->
 <head>
-
     <!-- Metas -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +37,7 @@
   <meta property="og:title" content="Shopping List" />
   <meta property="og:description"
     content="Reto semanal 03 | Pagina Shopping List para programa Summerhack EscuelaDevRock" />
-  <meta property="og:image" content="https://shopping-list-julieta.web.app/img/screencart.svg" />
+  <meta property="og:image" content="https://shopping-list-julieta.web.app/img/screencart3.png" />
   <meta property="og:image.alt" content="Shopping List" />
   <meta property="og:type" content="website" />
   
@@ -49,14 +48,14 @@
   <meta property="twitter:title" content="Shopping List" />
   <meta property="twitter:description"
     content="Reto semanal 03 | Pagina Shopping List para programa Summerhack EscuelaDevRock" />
-  <meta property="twitter:image" content="https://shopping-list-julieta.web.app/img/screencart.svg" />
+  <meta property="twitter:image" content="https://shopping-list-julieta.web.app/img/screencart3.png" />
   <meta property="twitter:url" content="https://shopping-list-julieta.web.app/" />
   
   <title>Shopping list</title>
 </head>
 <body>
   <header class="header">
-    <img class="header__logo" src="img/screencart.svg" alt="Logo Shopping list>
+    <img class="header__logo" src="img/screencart.svg" alt="Logo Shopping list">
     <h1 class="header__title">&nbsp;Shopping List</h1>
   </header>
   <section class="principal" >
@@ -121,7 +120,7 @@
 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                 id="btnCerrarModalGuardado">Cerrar</button>
-              <button type="submit" class="btn btn-primary" id="btnGuardarItem">Guardar</button>
+              <button type="button" class="btn btn-primary" id="btnGuardarItem">Guardar</button>
             </div>
           </div>
         </div>
