--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
             <div class="modal-body">
               <form class="needs-validation">
                 <div class="form-floating">
-                  <input class="form-control" list="titulos" id="titulo" placeholder="Ingrese el titulo para su item"
+                  <input class="form-control" list="titulos" id="titulo" placeholder="Ingrese el nombre de su producto"
                     required>
                   <datalist id="titulos">
                     <option value="Arroz">
@@ -85,8 +85,8 @@
                     <option value="Queso">
                     <option value="Yogurt">
                   </datalist>
-                  <label for="titulo" class="form-label">Titulo</label>
-                  <div id="desctitulo" class="form-text">Introduzca el titulo para su item</div>
+                  <label for="titulo" class="form-label">Producto</label>
+                  <div id="desctitulo" class="form-text">Introduzca el nombre de su producto</div>
                   <br>
                 </div>
                 <div class="form-floating">
@@ -102,7 +102,7 @@
                     <option value="8">Tecnologia</option>
                   </select>
                   <label for="categoria">Categoria</label>
-                  <div id="desccategoria" class="form-text">Elija la categoria que mejor describa su item</div>
+                  <div id="desccategoria" class="form-text">Elija la categoria que mejor describa su producto</div>
                 </div>
                 <br>
                 <div class="form-floating">
