--- a/public/index.html
+++ b/public/index.html
@@ -93,13 +93,15 @@
                   <select id="categoria" class="form-select" aria-label="Default select example">
                     <option value="0" selected>Varios</option>
                     <option value="1">Alimentos</option>
-                    <option value="2">Entretenimiento</option>
-                    <option value="3">Frutas y verduras</option>
-                    <option value="4">Jardin</option>
-                    <option value="5">Lacteos</option>
-                    <option value="6">Limpieza</option>
-                    <option value="7">Ropa</option>
-                    <option value="8">Tecnologia</option>
+                    <option value="2">Carnes</option>
+                    <option value="3">Entretenimiento</option>
+                    <option value="4">Frutas y verduras</option>
+                    <option value="5">Jardin</option>
+                    <option value="6">Lacteos</option>
+                    <option value="7">Limpieza</option>
+                    <option value="8">Ropa</option>
+                    <option value="9">Tecnologia</option>
+                    <option value="10">Vegetariano</option>
                   </select>
                   <label for="categoria">Categoria</label>
                   <div id="desccategoria" class="form-text">Elija la categoria que mejor describa su producto</div>
