Correccion img meta tw

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!-- Hola a todes! Yo no se ustedes, pero no dejo de pensar en codear durante todo el dia! Aguante SummerHack y aguante Jony con su buena onda ❤-->
+<!-- Hola a todes! Yo no se ustedes, pero no dejo de pensar en codear durante todo el dia! Aguante SummerHack y aguante Jony con su buena onda y ganas de enseñarnos❤-->
 <head>
     <!-- Metas -->
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
   <meta property="og:title" content="Shopping List" />
   <meta property="og:description"
     content="Reto semanal 03 | Pagina Shopping List para programa Summerhack EscuelaDevRock" />
-  <meta property="og:image" content="https://shopping-list-julieta.web.app/img/screencart3.png" />
+  <meta property="og:image" content="https://shopping-list-julieta.web.app/img/screencart4.png" />
   <meta property="og:image.alt" content="Shopping List" />
   <meta property="og:type" content="website" />
   
@@ -48,7 +48,7 @@
   <meta property="twitter:title" content="Shopping List" />
   <meta property="twitter:description"
     content="Reto semanal 03 | Pagina Shopping List para programa Summerhack EscuelaDevRock" />
-  <meta property="twitter:image" content="https://shopping-list-julieta.web.app/img/screencart3.png" />
+  <meta property="twitter:image" content="https://shopping-list-julieta.web.app/img/screencart4.png" />
   <meta property="twitter:url" content="https://shopping-list-julieta.web.app/" />
   
   <title>Shopping list</title>
