--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!-- Hola a todes! Yo no se ustedes, pero no dejo de pensar en codear durante todo el dia! Aguante SummerHack y aguante Jony con su buena onda y ganas de enseñarnos❤-->
+<!-- Hola a todes! ❤-->
 <head>
     <!-- Metas -->
     <meta charset="UTF-8">
