Agrega guardado y eliminacion de localstorage

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!-- Hola a todes! ❤-->
+<!-- Hola a todes! ❤ -->
 <head>
     <!-- Metas -->
     <meta charset="UTF-8">
@@ -163,7 +163,11 @@
 
    <section id="listado" class="listado">
       
-   </section>
+     <button id="borrarListadoBtn" type="button" class="btn btn-secondary" >
+     Borrar listado
+    </button>
+     
+  </section>
   
   </section>
  
